solve the calendar stuck in frame

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -47,22 +47,3 @@ input {
     border-bottom:1px solid #444; 
     cursor: pointer;
 }
-
-.scrollmenu {
-    /* display: inline-block; */
-    overflow: auto;
-    white-space: nowrap;
-    width: 100%;
-    height: 500;
-    overflow-y: auto;
-    overflow-x: auto;
-    transform-origin: right top;
-}
-
-.wrapText {
-    white-space: normal;
-}
-
-.componentBody {
-    margin: 20px;
-}
